uploading the code so far, the DatabaseManagerImplementation isnt really working right now, one of the methods at least