@@ -2,32 +2,50 @@ package en.via.sep2_exammaster.shared;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class Course
 {
   private String code;
   private String title;
   private String description;
-  private Teacher teacher;
+  private Teacher[] teachers;
   private ArrayList<Student> students;
-  private ArrayList<Exam> exams; // maybe should be a normal array, so that there
-                                 // can only be 3 exams per class (exam, 2 re-exams)
-  public Course(String code, String title, String description, Teacher teacher){
+  private ArrayList<Exam> exams;
+
+  public Course(String code, String title, String description, Teacher teacherCreating){
     this.code = code;
     this.title = title;
     this.description = description;
-    this.teacher = teacher;
+    this.teachers = new Teacher[2];
+    this.teachers[0] = teacherCreating;
     this.students = new ArrayList<>();
     this.exams = new ArrayList<>();
   }
 
-  public Course(String code, String title, String description, Teacher teacher, Student...students){
-    this.code = code;
-    this.title = title;
-    this.description = description;
-    this.teacher = teacher;
-    this.students = new ArrayList<>(Arrays.asList(students));;
-    this.exams = new ArrayList<>();
+  public void addAdditionalTeacher(Teacher teacher){
+    teachers[1] = teacher;
+  }
+
+  public void addStudents(Student...students){
+    this.students.addAll(List.of(students));
+  }
+
+  public void createExam(Exam exam){
+    exams.add(new Exam(exam, this));
+  }
+
+  public String getCode(){
+    return code;
+  }
+
+  public String getDescription(){
+    return description;
+  }
+
+  public Teacher getTeacher(int index){
+    if(index < 0 || index > 1) throw new IndexOutOfBoundsException("A course can only have 2 teachers so you must use index 0 or 1.");
+    return teachers[index];
   }
 
   public void addStudent(Student student){
@@ -42,10 +60,6 @@ public class Course
     return students;
   }
 
-  public void createExam(Exam exam){
-    exams.add(new Exam(exam, this));
-  }
-
   public ArrayList<Exam> getExams(){
     return exams;
   }
@@ -57,9 +71,10 @@ public class Course
     }
     return "Class title: " + title + "\n"
         + "Class description: " + description + "\n"
-        + "Class teacher: " + teacher + "\n"
+        + "Class teacher: " + teachers[0] + "\n"
         + "~~~~~~~~~~ Students ~~~~~~~~~~\n"
         + students.toString() + "\n"
+        + "~~~~~~~~~~ Exams ~~~~~~~~~~\n"
         + answer;
   }
 }
